maple-core-macro/tests/ui/component-fail.stderr
error: expected ident
  --> $DIR/component-fail.rs:15:27
   |
15 |     template! { Component(1) };
   |                           ^
